Fix SonarCloud code smells
- VaultControllerImpl: remove unused NotFoundException import (java:S1128)
- EndpointsListener: use Stream.toList() instead of collect(Collectors.toList())
  and drop the now-unused Collectors import (java:S6204); returned list is only
  passed to InfoResponse and never mutated

Refs #86